style/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');
@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap");

@font-face {
  font-family: "Europa-Regular";
  src: url("./fonts/Europa-Regular.otf");
}

:root {
  --main-font: var(--ori-font);
  --ori-font: "Inconsolata", monospace;
  --alt-font: "IM Fell English", serif;
}

html {
}

body {
  font-family: var(--main-font);
  font-weight: 500;
  background-color: #F3DEC4;
  font-size: 1.05rem;
  color: #242325;
  position: relative;
}

/* Parchment paper texture overlay */
body::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  pointer-events: none;
  z-index: -1;
  opacity: 0.20;
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.85' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
}

/* Additional subtle grain texture */
body::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  pointer-events: none;
  z-index: -1;
  opacity: 0.20;
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='grain'%3E%3CfeTurbulence type='turbulence' baseFrequency='0.5' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23grain)'/%3E%3C/svg%3E");
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #242325;
  /* color: black; */
  font-family: var(--main-font);
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.05em;
}

h1 {
  font-size: 2.2rem;
}

.test {
  /* background-color: #ffd4d4;
    padding: 10px;
    display: inline-block; */
  text-shadow: 4px 3px #ffd4d4;
}

h1 {
  margin-bottom: 20px;
}

a,
a:visited {
  color: #242325;
  text-decoration: none;
}
a:hover,
a:focus,
a:active,
a:visited:hover,
a:visited:focus,
a:visited:active {
  color: #242325;
  text-decoration: none;
}

#header {
  font-family: var(--main-font);
  font-size: 17px;

  position: fixed;
  top: 0;
  width: 100%;
  padding-left: 0px;
  padding-right: 0px;
  /* background-color: rgba(255, 212, 212, 0.9); */
  background-color: rgba(150, 112, 91, 0.9);
  z-index: 999;
}

#header:empty {
  height: 20px;
}

#header nav {
  padding-top: 0;
  padding-bottom: 0;
  height: 100%;
  /* background-color: white; */
}
#header nav .navbar-brand {
  font-weight: 900;
}
#header nav a {
  color: #242325;
}
#header nav a:hover {
  background-color: rgba(36, 35, 37, 0.1);
}
#header nav a.active {
  border-bottom: 3px solid #ed5151;
  font-weight: 700;
}
#header #header-img {
  /*    filter: brightness(70%);
*/
  background-image: url("../res/img/header.png");
  background-size: cover;
  height: 400px;

  position: relative;
}

#inner-img {
  height: 450px;
  position: absolute;
  left: 0;
  bottom: 0;
  filter: brightness(1.25);
}

#home-img {
  transform: translate(200px, -20px);
  /* position: float;
  left: 0;
  bottom: 0;
  filter: brightness(1.25); */
}

#copy {
  margin-top: 40px;
  /* background-color: white; */
  padding-top: 30px;
  height: 100%;
}
#course-intro-panel,
#final-project-panel,
#overview,
#grading,
#late-policy {
  padding: 20px;
  padding-right: 30px;
  padding-top: 0;
}
#staff-header {
  margin-bottom: 8px;
}
#assignments,
#resources {
  margin-bottom: 70px;
}
#assignments-table,
#final-project-table,
#labs-table,
#slides-table {
  margin-top: 40px;
  margin-bottom: 20px;
}

td {
    white-space: nowrap;
}

#home {
  margin-top: 0px;
  padding-top: 70px;
  height: 100%;
}

#sidebar {
  margin-top: -15px;
  /* border-left: 1px solid #f1f1f2; } */
}
#sidebar #overview {
  margin-top: 15px;
}
#sidebar #overview p {
  margin-bottom: 1px;
}
#course-intro-panel a {
  color: #ed5151;
}
.red {
  color: #ed5151 !important;
}

#sidebar a,
.pre-quiz a,
.python a,
.department-resources a,
.project deadline table a,
#course-documents a {
  color: #ed5151;
}
#sidebar a:hover,
#sidebar a:focus,
#sidebar a:active,
#course-intro-panel a:hover,
#course-intro-panel a:focus,
#course-intro-panel a:active,
#course-documents a:hover,
#course-documents a:focus,
#course-documents a:active,
.pre-quiz a:hover,
.python a:hover,
.department-resources a:hover,
.project deadline table a:hover,
.pre-quiz a:focus,
.python a:focus,
.department-resources a:focus,
.project deadline table a:hover,
.pre-quiz a:active,
.python a:active
.department-resources a:active,
.project deadline table a:active{
  color: black;
}

.table .out a {
  /* border-left: 5px solid #ed5151 !important; */
  border-bottom: 3px solid black !important;
  padding: 3px !important;
}

.table .unreleased {
  color: gray !important;
}

.table .out a:hover {
  /* background-color: #ed5151 !important; */
  background-color: black !important;
  color: white !important;
  border-bottom: 5px solid #fcfcfc !important;
  padding: 3px !important;
}

.pre-quiz,
.python {
  width: 75%;
  margin-bottom: 50px;
}
#python-quiz,
#stats-quiz {
  margin-left: 50px;
}
.quiz p,
.quiz a {
  margin-top: 4px;
}
p.quiz-desc {
  margin-bottom: 3px;
}

.probability,
.statistics,
.solutions,
.example,
.problem1,
.problem2,
.problem3,
.problem4,
.problem5 {
  margin-top: 80px;
}

.overview-sub {
  margin-top: 18px;
  margin-bottom: 3px;
}

.staff {
  margin-top: 1rem;
  text-align: center;
}
.staff .name {
  margin-top: 6px;
  margin-bottom: 0;
}
/* ... */

